--- a/package.json
+++ b/package.json
@@ -1,38 +1,27 @@
 {
-  "name": "web-fisio",
-  "version": "0.1.0",
-  "private": true,
+  "name": "api_fisioterapia",
+  "version": "1.0.0",
+  "main": "dist/server.js",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
   },
   "dependencies": {
-    "@fullcalendar/core": "^6.1.17",
-    "@fullcalendar/daygrid": "^6.1.17",
-    "@fullcalendar/interaction": "^6.1.17",
-    "@fullcalendar/react": "^6.1.17",
-    "@fullcalendar/timegrid": "^6.1.17",
-    "@headlessui/react": "^2.2.4",
-    "@heroicons/react": "^2.2.0",
-    "@tailwindcss/postcss": "^4.1.6",
-    "autoprefixer": "^10.4.21",
-    "axios": "^1.9.0",
-    "next": "^15.5.6",
-    "next-client-cookies": "^2.1.0",
-    "postcss": "^8.5.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "morgan": "^1.10.0",
+    "helmet": "^6.0.1",
+    "lowdb": "^3.0.0",
+    "nanoid": "^4.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19.1.3",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.2",
-    "tailwindcss": "^4.1.6",
-    "typescript": "^5"
+    "typescript": "^5.1.6",
+    "ts-node-dev": "^2.0.0",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.4.2",
+    "@types/cors": "^2.8.17",
+    "@types/morgan": "^1.9.4",
+    "@types/helmet": "^4.0.0"
   }
 }
