--- a/package.json
+++ b/package.json
@@ -3,25 +3,44 @@
   "version": "1.0.0",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/react": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
+    "@tailwindcss/postcss": "^4.1.17",
+    "autoprefixer": "^10.4.22",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
-    "morgan": "^1.10.0",
+    "express": "^4.18.2",
     "helmet": "^6.0.1",
     "lowdb": "^3.0.0",
-    "nanoid": "^4.0.0"
+    "morgan": "^1.10.0",
+    "nanoid": "^5.1.6",
+    "next": "^16.0.3",
+    "next-client-cookies": "^2.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.1.6",
-    "ts-node-dev": "^2.0.0",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.4.2",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.17",
+    "@types/helmet": "^4.0.0",
     "@types/morgan": "^1.9.4",
-    "@types/helmet": "^4.0.0"
+    "@types/node": "^20.4.2",
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.3",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.6"
   }
 }
