--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "lowdb": "^3.0.0",
+    "lucide-react": "^0.554.0",
     "morgan": "^1.10.0",
     "nanoid": "^5.1.6",
     "next": "^16.0.3",
